[package]
name = "rust-rsa-tool"
authors = ["colin.gxy <colin.gxy@outlook.com>"]
description = "A sophisticated encryption utility employing a hybrid cryptographic system. It integrates RSA and AES algorithms, supports both CBC and ECB operational modes, and utilizes Base64-encoded keys for streamlined key management."
license = "MIT OR Apache-2.0"
repository = "https://github.com/colinger/rust-rsa-tool"
documentation = "https://docs.rs/rust-rsa-tool"
version = "0.1.1"
edition = "2021"
rust-version = "1.90.0"

[dependencies]
rsa = "0.9.6"
rand = "0.8.5"
base64 = "0.22.1"
aes = "0.8.4"
cbc = "0.1.2"
ecb = "0.1.2"
cipher = { version = "0.4.4", features = ["std"] }
pkcs8 = { version = "0.10.2", features = ["pem", "std"] }
pkcs1 = { version = "0.7.5", features = ["pem", "std"] }
thiserror = "1.0.63"

[dev-dependencies]
tempfile = "3.12.0"
